<resources>
    <string name="app_name">晶乐</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="music">Music</string>
    <string name="action_settings">刷新</string>
    <string name="textview">...</string>

    <string name="cancel">Cancel</string>
    <string name="sure">OK</string>
    <string name="_4_3">4:3</string>
    <string name="_16_9">16:9</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="drawer_bar_music">Music</string>
    <string name="drawer_bar_video">Video</string>
    <string name="drawer_bar_tools">Settings</string>
    <string name="drawer_bar_share">Share</string>
    <string name="drawer_bar_yourname">Login</string>
    <string name="drawer_bar_email">2711192776@qq.com</string>
    <string name="dialog_delete">移除</string>
    <string name="dialog_delete_message">是否移除该视频</string>
    <string name="dialog_checkbox_text">删除原文件</string>
    <string name="video_resources">No More Videos</string>
    <string name="title_activity_login_qq">LoginQQActivity</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="screen_scoll_keyguard">滑动解锁</string>
    <string name="screen_scoll_keyguard_1">滑</string>
    <string name="screen_scoll_keyguard_2">动</string>
    <string name="screen_scoll_keyguard_3">解</string>
    <string name="screen_scoll_keyguard_4">锁</string>

</resources>
