<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/d6pmusic"
            android:title="@string/drawer_bar_music" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/d6qvideo"
            android:title="@string/drawer_bar_video" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/setting_draw"
            android:title="@string/drawer_bar_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/drawer_bar_share" />
        </menu>
    </item>

</menu>
