<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/gray"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/dialog_delete"
        />
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorAccent"/>
    <TextView
        android:id="@+id/tv_content_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:text="@string/dialog_delete_message"/>
    <CheckBox
        android:id="@+id/check_dialog_sum"
        android:layout_width="wrap_content"
        android:text="@string/dialog_checkbox_text"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_height="40dp">
    <Button
        android:id="@+id/dialog_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textColor="@color/gray"
        android:background="@drawable/button_select"
        />
    <Button
        android:id="@+id/dialog_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:textColor="@color/gray"
        android:background="@drawable/button_select"
        android:textSize="20sp"
        android:text="@string/sure"/>
    </LinearLayout>
</LinearLayout>