<com.android.view.SildingFinishFramLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sildinglayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/skin_bg_player_x"
    tools:context="com.android.play.FullscreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/screen_tv_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:text="00:06"
            />

        <TextView
            android:id="@+id/screen_tv_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#AAFFFFFF"
            android:text="05月31日 周二"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="40dp"
        android:orientation="vertical">


    <com.android.view.AlwaysMarqueeTextView
        android:id="@+id/screen_tv_songname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColor="#AAFFFFFF"
        android:text="songname"/>

    <TextView
        android:id="@+id/screen_tv_songauth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#AAFFFFFF"
        android:text="songauth"
        />
    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/screen_bt_next"
        android:layout_marginBottom="80dp"
        android:background="@drawable/keyguar_round"
        android:src="@drawable/keyguard_button_next"
        android:layout_marginRight="50dp"
        android:layout_gravity="right|bottom" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/screen_bt_pres"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/keyguar_round"
        android:src="@drawable/keyguard_button_pres"
        android:layout_gravity="left|bottom" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/screen_bt_playorpause"
        android:layout_marginBottom="80dp"
        android:background="@drawable/keyguar_round"
        android:src="@drawable/keyguard_button_play"
        android:layout_gravity="center_horizontal|bottom" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="35dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_scoll_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_scoll_keyguard_1"
            android:textColor="#AAFFFF00"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/tv_scoll_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_scoll_keyguard_2"
            android:textColor="#AAFFFFFF"
            android:layout_marginLeft="2dp"
            android:textSize="10sp"
            />
        <TextView
            android:id="@+id/tv_scoll_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_scoll_keyguard_3"
            android:textColor="#AAFFFFFF"
            android:layout_marginLeft="2dp"
            android:textSize="10sp"
            />
        <TextView
            android:id="@+id/tv_scoll_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_scoll_keyguard_4"
            android:textColor="#AAFFFFFF"
            android:layout_marginLeft="2dp"
            android:textSize="10sp"
            />
    </LinearLayout>

</com.android.view.SildingFinishFramLayout>
